1. html / css 추가 작업 진행. 2. popup쪽 화면 생성. 3. 없는 화면 임시 구성하여 연결.

--- a/app/views/main/activity/activity.html
+++ b/app/views/main/activity/activity.html
@@ -5,7 +5,7 @@
 	<div class="content">
 		<span>Sally Wilson was apply to join the Love Photo. 2h ago</span>
 	</div>
-	<div class="options-btn">
+	<div class="options-button">
 		<img src="images/AddMemberBtn.png">
 	</div>
 </div>
