--- a/app/views/main/profile/profile.html
+++ b/app/views/main/profile/profile.html
@@ -37,7 +37,7 @@
 </div>
 
 <a ng-href="#/create-group">
-	<div class="create-btn">
+	<div class="create-button">
 		<span>CREATE NEW BAGEL</span>
 	</div>
 </a>
