--- a/app/views/main/timeline/timeline.html
+++ b/app/views/main/timeline/timeline.html
@@ -1,7 +1,7 @@
 <div class="card">
 	<div class="info">
 		<div class="card-info">
-			<img src="images/profilePhotoThumb.png">
+			<a ng-href="#/user-profile"><img src="images/profilePhotoThumb.png"></a>
 			<span>Sally Wilson</span><br><span>in <a ng-href="#/group">Love Photo</a></span>
 		</div>
 		<div class="time">
