--- a/app/views/popup/create-card/create-card.html
+++ b/app/views/popup/create-card/create-card.html
@@ -12,6 +12,14 @@
 	<div class="link">
 		<img src="images/linkimage.png">
 	</div>
+
+	<div class="link">
+		<img src="images/linkimage.png">
+	</div>
+
+	<div class="link">
+		<img src="images/linkimage.png">
+	</div>
 </div>
 
 <div class="create-options-con">
@@ -19,4 +27,33 @@
 		<img src="images/CameraIcon.png">
 		<span>CAMERA</span>
 	</div>
+
+	<div class="create-option">
+		<img src="images/CommentIcon.png">
+		<span>COMMENT</span>
+	</div>
+
+	<div class="create-option">
+		<img src="images/TimerIcon.png">
+		<span>TIMER</span>
+	</div>
+
+<a ng-href="#/polling">
+	<div class="create-option">
+		<img src="images/PollIcon.png">
+		<span>POLL</span>
+	</div>
+</a>
+
+	<div class="create-option">
+		<img src="images/AverageIcon.png">
+		<span>AVERAGE</span>
+	</div>
+
+	<div class="create-option">
+		<img src="images/RatingIcon.png">
+		<span>RATING</span>
+	</div>
 </div>
+
+<a ng-href="#/select-group"><div>임시 POST-> 화면연결</div></a>
