--- a/app/views/popup/polling/polling.html
+++ b/app/views/popup/polling/polling.html
@@ -1,1 +1,18 @@
-polling
+<div class="item-input-con">
+	<input class="item-input" type="text" placeholder="ITEM INPUT">
+</div>
+
+<div class="item-add">
+	<img src="images/AddItemBtn.png">
+	<span>ADD ITEM</span>
+</div>
+
+<div class="switch">
+	<span>SECRET POLLING</span>
+	<img src="images/SwitchOffBtn.png">
+</div>
+
+<div class="switch">
+	<span>MULTIPLE SELECTION</span>
+	<img src="images/SwitchOnBtn.png">
+</div>
