--- a/app/views/popup/select-group/select-group.html
+++ b/app/views/popup/select-group/select-group.html
@@ -1,1 +1,15 @@
-selected-group
+<a ng-href="#/create-group">
+	<div class="create-group">
+		<span>CTRATE NEW BAGLE</span>
+		<img src="images/AddBagleBtn.png">
+	</div>
+</a>
+
+<div class="select-group">
+	<span>GROUP NAME</span>
+	<img src="images/Check200.png">
+</div>
+
+<div class="post-button">
+	<span>POST</span>
+</div>
