--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -19,6 +19,9 @@ $white: #ffffff;
 $bright-white: #B37F75;
 $gray: #e8e8e8;
 $bright-gray: #f1f1f1;
+$dark-gray: #848484;
+$black: #000000;
+
 // ------ sass ------
 
 
@@ -79,6 +82,13 @@ $bright-gray: #f1f1f1;
   width: 100%;
   height: 1px;
   background-color: $bright-gray;
+}
+
+.tab-line {
+  float: left;
+  width: 1px;
+  height: 100%;
+  background-color: $white;
 }
 
 
@@ -270,116 +280,119 @@ $bright-gray: #f1f1f1;
 }
 
 // ------ auth ------
-
-.auth-menu {
+.auth {
   float: left;
   width: 100%;
   height: 100%;
-  .signup {
+  background-color: $red;
+  .auth-menu {
     float: left;
-    width: 25%;
-    height: 110px;
-    margin: 0 0 0 10%;
-    line-height: 110px;
-    text-align: center;
-    color: $bright-white;
+    width: 100%;
+    height: 100%;
+    .signup {
+      float: left;
+      width: 25%;
+      height: 110px;
+      margin: 0 0 0 10%;
+      line-height: 110px;
+      text-align: center;
+      color: $bright-white;
+    }
+    .logo {
+      float: left;
+      display: table-cell;
+      vertical-align: middle;
+      text-align:center; 
+      line-height: 110px;
+      width: 30%;
+      height: 110px;
+      img {
+        display: inline-block;
+        width: 44px;
+        height: 44px;
+      }
+    }
+    .login {
+      float: left;
+      width: 25%;
+      height: 110px;
+      margin: 0 10% 0 0;
+      line-height: 110px;
+      text-align: center;
+      color: $white;
+    }
   }
-  .logo {
+
+  .write {
+    float: left;
+    width: 100%;
+    height: auto;
+    .email-con {
+      float: left;
+      width: 100%;
+      height: 60px;
+      background: url('../images/LoginBar02.png');
+      margin: 0 0 1px 0;
+      .email {
+        float: left;
+        width: 100%;
+        height: 60px;
+        border:none;
+        background:transparent;
+        text-align: center;
+      }
+    }
+    .password-con {
+      float: left;
+      width: 100%;
+      height: 46px;
+      background: url('../images/LoginBar02.png');
+      .password {
+        float: left;
+        width: 90%;
+        height: 100%;
+        border:none;
+        background:transparent;
+        text-align: center;
+        padding: 0 0 0 10%;
+      }
+      .approval {
+        float: right;
+        width: 23px;
+        height: 100%;
+        margin: 0 13px 0 0;
+      }
+    }
+  }
+
+  .or {
+    float: left;
+    width: 100%;
+    height: auto;
+    margin: 29px 0 0 0;
+    text-align: center;
+  }
+
+  .social {
     float: left;
     display: table-cell;
     vertical-align: middle;
     text-align:center; 
-    line-height: 110px;
-    width: 30%;
-    height: 110px;
-    img {
+    width: 100%;
+    height: auto;
+    margin: 24px 0 0 0;
+    .google {
       display: inline-block;
       width: 44px;
       height: 44px;
+      margin: 0 7.5px 0 0;
     }
-  }
-  .login {
-    float: left;
-    width: 25%;
-    height: 110px;
-    margin: 0 10% 0 0;
-    line-height: 110px;
-    text-align: center;
-    color: $white;
-  }
-}
-
-.write {
-  float: left;
-  width: 100%;
-  height: auto;
-  .email-con {
-    width: 100%;
-    height: 46px;
-    background: url('images/LoginBar01.png');
-    background-repeat: no-repeat;
-    z-index: 1000;
-    .email {
-      float: left;
-      width: 100%;
-      height: 100%;
-      line-height:46px;
-      border:none;
-      background:transparent;
-      text-align: center;
+    .facebook {
+      display: inline-block;
+      width: 44px;
+      height: 44px;
+      margin: 0 0 0 7.5px;
     }
-  }
-  .password-con {
-    width: 100%;
-    height: 46px;
-    background: url('images/LoginBar02.png');
-    background-repeat: no-repeat;
-    .password {
-      float: left;
-      width: 90%;
-      height: 100%;
-      line-height:46px;
-      border:none;
-      background:transparent;
-      text-align: center;
-      padding: 0 0 0 10%;
-    }
-    .approval {
-      float: right;
-      width: 23px;
-      height: 100%;
-      margin: 0 13px 0 0;
-    }
-  }
-}
-
-.or {
-  float: left;
-  width: 100%;
-  height: auto;
-  margin: 29px 0 0 0;
-  text-align: center;
-}
-
-.social {
-  float: left;
-  display: table-cell;
-  vertical-align: middle;
-  text-align:center; 
-  width: 100%;
-  height: auto;
-  margin: 24px 0 0 0;
-  .google {
-    display: inline-block;
-    width: 44px;
-    height: 44px;
-    margin: 0 7.5px 0 0;
-  }
-  .facebook {
-    display: inline-block;
-    width: 44px;
-    height: 44px;
-    margin: 0 0 0 7.5px;
   }
 }
 
@@ -388,8 +401,7 @@ $bright-gray: #f1f1f1;
 .search-con {
   width: 100%;
   height: 46px;
-  background-image: url('images/searchBar.png');
-  background-repeat: no-repeat;
+  background-image: url('../images/searchBar.png');
   .search {
     float: left;
     width: 100%;
@@ -413,7 +425,7 @@ $bright-gray: #f1f1f1;
     float: left;
     width: 50%;
     height: 46px;
-    background-image: url('images/TabLeftBtn.png');
+    background-image: url('../images/TabLeftBtn.png');
     text-align: center;
     line-height: 46px;
   }
@@ -421,7 +433,7 @@ $bright-gray: #f1f1f1;
     float: right;
     width: 50%;
     height: 46px;
-    background-image: url('images/TabRightBtn.png');
+    background-image: url('../images/TabRightBtn.png');
     text-align: center;
     line-height: 46px;
   }
@@ -431,6 +443,7 @@ $bright-gray: #f1f1f1;
   float: left;
   width: 100%;
   height: 88px;
+  background-image: url('../images/BaglePhoto.png');
   .group-con {
     float: left;
     width: 70%;
@@ -507,7 +520,7 @@ $bright-gray: #f1f1f1;
     }
   }
   
-  .options-btn {
+  .options-button {
     float: right;
     width: auto;
     height: 100%;
@@ -565,7 +578,7 @@ $bright-gray: #f1f1f1;
   }
 }
 
-.create-btn {
+.create-button {
   float: left;
   width: 100%;
   height: 87px;
@@ -792,9 +805,18 @@ $bright-gray: #f1f1f1;
   height: 53px;
   border-bottom: 1px solid $gray;
   .link {
+    position: relative;
+    float: left;
+    width: 53px;
+    height: 100%;
     img {
+      display:block;
+      position:absolute;
+      top:50%;
+      left:50%;
       width: 34px;
       height: 34px;
+      margin: -17px 0 0 -17px;
     }
   }
 }  
@@ -802,13 +824,121 @@ $bright-gray: #f1f1f1;
 .create-options-con {
   float: left;
   width: 100%;
-  height: 56px;
+  height: auto;
   .create-option {
+    float: left;
+    width: 16.6%;
+    height: 56px;
+    text-align: center;
+    margin: 10px 0 0 0;
     img {
-
+      width: 100%;
+      height: 23px;
     }
     span {
-
+      font-size: 11px;
+      color: $dark-gray;
     }
+  }
+}
+
+// ------ polling ------
+
+.item-input-con {
+  float: left;
+  width: 100%;
+  height: 46px;
+  .item-input {
+    float: left;
+    width: 100%;
+    height: 100%;
+    border: none;
+    padding: 0 0 0 15px;
+  }
+}
+
+.item-add {
+  float: left;
+  width: 100%;
+  height: 46px;
+  border-bottom: 1px solid $gray;
+  img {
+    float: left;
+    width: 12.5px;
+    height: 100%;
+    margin: 0 0 0 15px;
+  }
+  span {
+    line-height: 46px;
+    margin: 0 0 0 10px;
+  }
+}
+
+.switch {
+  float: left;
+  width: 100%;
+  height: 46px;
+  span {
+    line-height: 46px;
+    margin: 0 0 0 15px;
+  }
+  img {
+    float: right;
+    width: 39px;
+    height: 100%;
+    margin: 0 15px 0 0;
+  }
+}
+
+// ------ select-group ------
+
+.create-group {
+  float: left;
+  width: 100%;
+  height: 62px;
+  background-color: $black;
+  span {
+    float: left;
+    margin: 0 0 0 16px;
+    line-height: 62px;
+    color: $white;
+  }
+  img {
+    float: right;
+    width: 32px;
+    height: 100%;
+    margin: 0 11px 0 0;
+  }
+}
+
+.select-group {
+  float: left;
+  width: 100%;
+  height: 62px;
+  background-image: url('../images/BagleImageGradient.png');
+  span {
+    float: left;
+    margin: 0 0 0 16px;
+    line-height: 62px;
+    color: $white;
+  }
+  img {
+    float: right;
+    width: 25px;
+    height: 100%;
+    margin: 0 15px 0 0;
+  }
+}
+
+.post-button {
+  position: absolute;
+  left: 0;
+  bottom: 51px;
+  width: 100%;
+  height: 65px;
+  background-color: $dark-red;
+  text-align: center;
+  span{
+    line-height: 65px;
   }
 }
