--- a/app/views/popup/auth/login/login.html
+++ b/app/views/popup/auth/login/login.html
@@ -1,21 +1,23 @@
-<div class="auth-menu">
-	<a ng-href="#/signup"><span class="signup">SIGNUP</span></a>
-	<div class="logo">
-		<img src="images/LoginLogo.png">
+<div class="auth">
+	<div class="auth-menu">
+		<a ng-href="#/signup"><span class="signup">SIGNUP</span></a>
+		<div class="logo">
+			<img src="images/LoginLogo.png">
+		</div>
+		<a ng-href="#/login"><span class="login">LOGIN</span></a>
 	</div>
-	<a ng-href="#/login"><span class="login">LOGIN</span></a>
-</div>
-<div class="write">
-	<div class="email-con">
-		<input class="email" type="text" placeholder="EMAIL">
+	<div class="write">
+		<div class="email-con">
+			<input class="email" type="text" placeholder="EMAIL">
+		</div>
+		<div class="password-con">
+			<input class="password" type="text" placeholder="PASSWORD">
+			<img class="approval" src="images/LoginBtn.png">
+		</div>
 	</div>
-	<div class="password-con">
-		<input class="password" type="text" placeholder="PASSWORD">
-		<img class="approval" src="images/LoginBtn.png">
+	<span class="or">OR</span>
+	<div class="social">
+		<img class="google" src="images/GoogleBtn.png">
+		<img class="facebook" src="images/FacebookBtn.png">
 	</div>
-</div>
-<span class="or">OR</span>
-<div class="social">
-	<img class="google" src="images/GoogleBtn.png">
-	<img class="facebook" src="images/FacebookBtn.png">
 </div>
