구성된 모든 화면 완료.
디테일 보강 필요.

--- a/app/views/popup/create-group/create-group.html
+++ b/app/views/popup/create-group/create-group.html
@@ -18,15 +18,11 @@
 		<span>BAGLE TYPE</span>
 	</div>
 	<div class="type">
-		<div class="type-name">
+		<div class="name-description">
 			<span>Public</span>
-		</div>
-		<div class="type-description">
 			<span>Description</span>
 		</div>
-		<div class="type-complete">
-			<img src="images/CompleteBtn.png">
-		</div>
+		<img src="images/Check180.png">
 	</div>
 </div>
 
