--- a/app/views/popup/edit-group/edit-group.html
+++ b/app/views/popup/edit-group/edit-group.html
@@ -1,3 +1,87 @@
-edit-group
+<div class="create-name-con">
+	<div class="name">
+		<span>BAGLE NAME</span>
+	</div>
+	<div class="name">
+		<span>Information</span>
+	</div>
+	<img src="images/BagleImageBtn.png">
+</div>
 
-<a ng-href="#/select-member"><div>임시 select-member 화면연결</div></a>
+<div class="automatic-con">
+	<span>AUTOMATI JOIN</span>
+	<img src="images/SwitchOnBtn.png">
+</div>
+
+<div class="type-con">
+	<div class="type-title">
+		<span>BAGLE TYPE</span>
+	</div>
+	<div class="type">
+		<div class="name-description">
+			<span>Public</span>
+			<span>Description</span>
+		</div>
+		<img src="images/Check180.png">
+	</div>
+	<div class="type">
+		<div class="name-description">
+			<span>Public</span>
+			<span>Description</span>
+		</div>
+		<img src="images/Check180.png">
+	</div>
+	<div class="type">
+		<div class="name-description">
+			<span>Public</span>
+			<span>Description</span>
+		</div>
+		<img src="images/Check180.png">
+	</div>
+</div>
+
+<div class="type-con">
+	<div class="type-title">
+		<span>POSTER SELECTION</span>
+	</div>
+	<div class="type">
+		<div class="name-description">
+			<span>Public</span>
+			<span>Description</span>
+		</div>
+		<img src="images/Check180.png">
+	</div>
+
+	<div class="type">
+		<div class="name-description">
+			<span>Public</span>
+			<span>Description</span>
+		</div>
+		<img src="images/Check180.png">
+	</div>
+</div>
+
+<a ng-href="#/select-member">
+	<div class="selected-members">
+		<div class="text-con">
+			<span>Selected members</span>
+			<span>Description</span>
+		</div>
+		<img class="arrow-right-button" src="images/ArrowRightBtn200.png">
+	</div>
+</a>
+
+<div class="url-con">
+	<div class="url-title">
+		<span>INVITE URL</span>
+	</div>
+	<div class="url">
+		<span>http://bagle.com/asdf</span>
+	</div>
+</div>
+
+<div class="delete-con">
+	<div class="delete-title">
+		<span>DELETE BAGLE</span>
+	</div>
+</div>
