--- a/app/views/popup/group/group.html
+++ b/app/views/popup/group/group.html
@@ -1,5 +1,75 @@
-특정 group 의 timeline
+<div class="group-info">
+	<div class="group-con">
+		<div class="master">
+			<img src="images/profilePhotoThumb.png">
+			<span>Sally Wilson</span><br><span>in Love Photo</span>
+		</div>
+		<div class="description">
+			Information
+		</div>
+	</div>
+	<div class="option">
+		<a ng-href="#/edit-group"><img src="images/BagleOptionBtn.png"></a>
+		<a ng-href="#/member"><img src="images/BagleMemberBtn.png"></a>
+	</div>
+</div>
 
-<a ng-href="#/member"><div>임시 member 화면연결</div></a>
-
-<a ng-href="#/edit-group"><div>임시 edit-group 화면연결</div></a>
+<div class="card">
+	<div class="info">
+		<div class="card-info">
+			<a ng-href="#/user-profile"><img src="images/profilePhotoThumb.png"></a>
+			<span>Sally Wilson</span><br><span>in <a ng-href="#/group">Love Photo</a></span>
+		</div>
+		<div class="time">
+			<span>2h ago</span><img src="images/PostTime.png">
+		</div>
+	</div>
+	<div class="line"></div>
+	<div class="timer">
+		<img src="images/Timer.png">
+		<div class="title">
+			TIME LIMIT
+		</div>
+		<div class="time">
+			<span>2014.12.04 / 03:00 PM</span>
+		</div>
+	</div>
+	<div class="description-photo">
+		<img src="images/media-photo.png">
+	</div>
+	<div class="description-text">
+		The wedding hashtag. for the uniniaiated, can uaually The wedding hashtag. for the uniniaiated, can uaually The wedding hashtag. for the uniniaiated, can uaually The wedding hashtag. for the uniniaiated, can uaually The wedding hashtag. for the uniniaiated, can uaually The wedding hashtag. for the uniniaiated, can uaually The wedding hashtag. for the uniniaiated, can uaually
+	</div>
+	<div class="servey">
+		<div class="radio-group">
+			<input class="radio-button" type="radio"><span>I`m black and tall.</span>
+		</div>
+		<div class="checkbox-group">
+			<input class="checkbox-button" type="checkbox"><span>I`m black and tall.</span>
+		</div>
+		<div class="rating">
+			<img src="images/RatingIconActive.png">
+			<img src="images/RatingIconActive.png">
+			<img src="images/RatingIcon.png">
+			<img src="images/RatingIcon.png">
+			<img src="images/RatingIcon.png">
+			<span>2.0</span>
+		</div>
+		<div class="input-number">
+			<input class="number" type="text" placeholder="Input Numbers">
+		</div>
+	</div>
+	<div class="options">
+		<div class="more">
+			<img src="images/PostOptionBtn.png">
+		</div>
+		<div class="add-comment">
+			<img src="images/PostAddComment.png">
+			<span>Add Comment</span>
+		</div>
+		<div class="send">
+			<img src="images/PostSend.png">
+			<span>Send</span>
+		</div>
+	</div>
+</div>
