--- a/app/views/popup/language/language.html
+++ b/app/views/popup/language/language.html
@@ -1,1 +1,20 @@
-language
+<div class="language-con">
+	<span>English</span>
+	<img src="images/check180.png">
+</div>
+
+<div class="language-con">
+	<span>English</span>
+</div>
+
+<div class="language-con">
+	<span>English</span>
+</div>
+
+<div class="language-con">
+	<span>English</span>
+</div>
+
+<div class="language-con">
+	<span>English</span>
+</div>
