--- a/app/views/popup/member/member.html
+++ b/app/views/popup/member/member.html
@@ -1,3 +1,20 @@
-member리스트
+<a ng-href="#/invite-member">
+	<div class="invite-member">
+		<img class="add-button" src="images/AddBtnGray.png">
+		<span>INVITE MEMBERS</span>
+		<img class="arrow-right-button" src="images/ArrowRightBtn200.png">
+	</div>
+</a>
 
-<a ng-href="#/invite-member"><div>임시 invite-member 화면연결</div></a>
+<div class="member-con">
+	<div class="member-photo-con">
+		<img src="images/ProfilePhotoThumb.png">
+	</div>
+	<div class="member-name-con">
+		<span class="member-name">Isobel Garrett</span>
+		<span class="member-roll">Creater & Poster</span>
+	</div>
+	<div class="remove">
+		<span>REMOVE</span>
+	</div>
+</div>
