--- a/app/views/popup/password/password.html
+++ b/app/views/popup/password/password.html
@@ -1,1 +1,14 @@
-password
+<div class="password-con">
+	<img src="images/Lock.png">
+	<input class="input-password" type-"text" placeholder="Current Password">
+</div>
+
+<div class="password-con">
+	<img src="images/Lock.png">
+	<input class="input-password" type-"text" placeholder="New Password">
+</div>
+
+<div class="password-con">
+	<img src="images/Lock.png">
+	<input class="input-password" type-"text" placeholder="New Password again">
+</div>
