--- a/app/views/popup/profile/profile.html
+++ b/app/views/popup/profile/profile.html
@@ -1,6 +1,32 @@
-특정 사용자의 profile
+<div class="user-info">
+	<img src="images/ProfilePhoto.png">
+	<div class="name-con">
+		<span>User Name</span><br>
+		<span>User Information</span>
+	</div>
+</div>
 
+<div class="bagle-tab">
+	<div class="popular">
+		<span>POPULAR BAGLE</span>
+	</div>
+	<div class="new">
+		<span>NEW BAGLE</span>
+	</div>
+</div>
 
-<a ng-href="#/member"><div>임시 member 화면연결</div></a>
-
-<a ng-href="#/edit-group"><div>임시 edit-group 화면연결</div></a>
+<div class="group-info">
+	<div class="group-con">
+		<div class="master">
+			<img src="images/profilePhotoThumb.png">
+			<span>Sally Wilson</span><br><span>in Love Photo</span>
+		</div>
+		<div class="description">
+			Information
+		</div>
+	</div>
+	<div class="option">
+		<img src="images/AddBagleBtn.png">
+		<img src="images/AddBagleBtn.png">
+	</div>
+</div>
