--- a/app/views/popup/select-member/select-member.html
+++ b/app/views/popup/select-member/select-member.html
@@ -1,1 +1,38 @@
-특정 member에게 posting 권한 부여 화면
+<div class="poster-con">
+	<div class="poster-photo">
+		<img src="images/ProfilePhotoThumb.png">
+	</div>
+	<div class="roll-con">
+		<span class="poster">Isobel Garret</span>
+		<span class="member">Creater & Poster</span>
+	</div>
+	<div class="check-image">
+		<img src="images/check200.png">
+	</div>
+</div>
+
+<div class="poster-con">
+	<div class="poster-photo">
+		<img src="images/ProfilePhotoThumb.png">
+	</div>
+	<div class="roll-con">
+		<span class="poster">Ian Porter</span>
+		<span class="member">Poster</span>
+	</div>
+	<div class="check-image">
+		<img src="images/check200.png">
+	</div>
+</div>
+
+<div class="poster-con">
+	<div class="poster-photo">
+		<img src="images/ProfilePhotoThumb.png">
+	</div>
+	<div class="roll-con">
+		<span class="poster">Owen Chapman</span>
+		<span class="member">Member</span>
+	</div>
+	<div class="check-image">
+		<img src="images/check200.png">
+	</div>
+</div>
