--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -225,14 +225,16 @@ $black: #000000;
       }
       .input-number {
         float: left;
-        width: auto;
-        height: 26px;
+        width: 100%;
+        height: auto;
         padding: 0 3px 0 3px;
         .number {
-        background-color: $gray;
-        appearance: none;
-        box-shadow: none;
-        border-radius: 3px;
+          width: 100%;
+          height: 45px;
+          background-color: $gray;
+          border: none;
+          border-radius: 3px;
+          text-align: center;
         }
       }
     }
@@ -401,7 +403,7 @@ $black: #000000;
 .search-con {
   width: 100%;
   height: 46px;
-  background-image: url('../images/searchBar.png');
+  background : url('../images/searchBar.png');
   .search {
     float: left;
     width: 100%;
@@ -425,7 +427,7 @@ $black: #000000;
     float: left;
     width: 50%;
     height: 46px;
-    background-image: url('../images/TabLeftBtn.png');
+    background: url('../images/TabLeftBtn.png');
     text-align: center;
     line-height: 46px;
   }
@@ -433,7 +435,7 @@ $black: #000000;
     float: right;
     width: 50%;
     height: 46px;
-    background-image: url('../images/TabRightBtn.png');
+    background: url('../images/TabRightBtn.png');
     text-align: center;
     line-height: 46px;
   }
@@ -443,7 +445,7 @@ $black: #000000;
   float: left;
   width: 100%;
   height: 88px;
-  background-image: url('../images/BaglePhoto.png');
+  background: url('../images/BaglePhoto.png');
   .group-con {
     float: left;
     width: 70%;
@@ -480,11 +482,11 @@ $black: #000000;
     float: right;
     width: auto;
     height: 100%;
-    padding: 0 8px 0 0;
     img {
       float: right;
       width: 32px;
       height: auto;
+      padding: 0 8px 0 0;
     }
   }
 }
@@ -624,7 +626,7 @@ $black: #000000;
   float: left;
   display: table;
   width: 100%;
-  height: auto;
+  height: 46px;
   span {
     display:table-cell;
     vertical-align:middle;
@@ -657,37 +659,21 @@ $black: #000000;
     float: left;
     width: 100%;
     height: 56px;
-    .type-name {
+    padding: 0 15px 0 35px;
+    .name-description {
       float: left;
-      display: table;
-      width: 70%;
-      height: 28px;
-      padding: 0 0 0 35px;
+      width: 80%;
+      height: auto;
       span {
-        display:table-cell;
-        vertical-align:middle;
+        float: left;
+        width: 100%;
+        height: auto;
       }
     }
-    .type-description {
-      float: left;
-      display: table;
-      width: 70%;
-      height: 28px;
-      padding: 0 0 0 35px;
-      span {
-        display:table-cell;
-        vertical-align:middle; 
-      }
-    }
-    .type-complete {
+    img {
       float: right;
-      width: 10%;
+      width: 20px;
       height: 100%;
-      img {
-        width: 20px;
-        height: 20px;
-        border-radius: 50%;
-      }
     }
   }
 }
@@ -915,7 +901,7 @@ $black: #000000;
   float: left;
   width: 100%;
   height: 62px;
-  background-image: url('../images/BagleImageGradient.png');
+  background: url('../images/BagleImageGradient.png');
   span {
     float: left;
     margin: 0 0 0 16px;
@@ -942,3 +928,277 @@ $black: #000000;
     line-height: 65px;
   }
 }
+
+// ------ member ------
+
+.invite-member {
+  float: left;
+  width: 100%;
+  height: 62px;
+  padding: 0 15px 0 17px;
+  border-bottom: 1px solid $gray;
+  .add-button {
+    float: left;
+    width: 34px;
+    height: 100%;
+  }
+  span {
+    float: left;
+    line-height: 62px;
+    padding: 0 0 0 17px;
+  }
+  .arrow-right-button {
+    float: right;
+    width: 40px;
+    height: 100%;
+  }
+}
+
+.member-con {
+  float: left;
+  width: 100%;
+  height: 62px;
+  padding: 0 15px 0 9px;
+  border-bottom: 1px solid $gray;
+  .member-photo-con {
+    position: relative;
+    float: left;
+    width: 58px;
+    height: 100%;
+    img {
+      display:block;
+      position:absolute;
+      float: left;
+      top:50%;
+      left:50%;
+      width: 50px;
+      height: 50px;
+      margin: -25px 0 0 -25px;
+      border-radius: 50%;
+    }
+  }
+  .member-name-con {
+    float: left;
+    width: 60%;
+    height: 100%;
+    margin: 0 0 0 9px;
+    padding: 10px 0 0 0;
+    .member-name {
+      float: left;
+      width: 60%;
+      height: auto;
+    }
+    .member-roll {
+      float: left;
+      width: 60%;
+      height: auto;
+    }
+  }
+  .remove {
+    float: right;
+    width: auto;
+    height: 100%;
+    span {
+      line-height: 62px;
+    }
+  }
+}
+
+// ------ group-edit ------
+
+.selected-members {
+  float: left;
+  width: 100%;
+  height: 62px;
+  padding: 0 15px 0 35px;
+  .text-con {
+    float: left;
+    width: 80%;
+    height: auto;
+    span {
+      float: left;
+      width: 100%;
+      height: auto;
+    }
+  }
+  img {
+    float: right;
+    width: 40px;
+    height: 100%;
+  }
+}
+
+.delete-con {
+  float: left;
+  width: 100%;
+  height: 46px;
+  .delete-title {
+    float: left;
+    width: auto;
+    height: 100%;
+    span {
+      margin: 0 0 0 16px;
+      line-height: 46px;
+      font-weight: 800;
+      color: $dark-red;
+    }
+  }
+}
+
+// ------ edit-profile ------
+
+
+.login-info-con {
+  float: left;
+  width: 100%;
+  height: auto;
+  padding: 0 15px 0 15px;
+  .login-info-title-con {
+    float: left;
+    width: 100%;
+    height: 46px;
+    span {
+      line-height: 46px;
+    }
+  }
+  .login-type-con {
+    float: left;
+    width: 100%;
+    height: 56px;
+    line-height: 56px;
+    .login-type {
+      float: left;
+      padding: 0 15px 0 15px;
+    }
+    .type-text {
+      float: right;
+    }
+  }
+}
+
+
+.setting-con {
+  float: left;
+  width: 100%;
+  height: 56px;
+  padding: 0 15px 0 15px;
+  .setting-tltle {
+    float: left;
+    width: auto;
+    height: 100%;
+    span {
+      line-height: 56px;
+    }
+  }
+  .setting-sub-title {
+    float: right;
+    width: auto;
+    height: 100%;
+    span {
+      line-height: 56px;
+    }
+  }
+  img {
+    float: right;
+    width: 40px;
+    height: 100%;
+  }
+}
+
+.delege-account {
+  float: left;
+  width: 100%;
+  height: 56px;
+  background: url('../images/DeleteAccountBtn.png');
+  span {
+    line-height: 56px;
+    padding: 0 0 0 15px;
+  }
+}
+
+// ------ change-password ------
+
+.password-con {
+  float: left;
+  width: 100%;
+  height: 56px;
+  padding: 0 0 0 15px;
+  img {
+    float: left;
+    width: 10px;
+    height: 100%;
+  }
+  .input-password {
+    float: left;
+    width: 97%;
+    height: 100%;
+    border: none;
+    padding: 0 0 0 15px;
+  }
+}
+
+// ------ language ------
+
+.language-con {
+  float: left;
+  width: 100%;
+  height: 56px;
+  padding: 0 15px 0 15px;
+  span {
+    float: left;
+    line-height: 56px;
+  }
+  img {
+    float: right;
+    width: 20px;
+    height: 100%;
+  }
+}
+
+// ------ select-member ------
+
+.poster-con {
+  float: left;
+  width: 100%;
+  height: 62px;
+  padding: 0 15px 0 9px;
+  .poster-photo {
+    float: left;
+    width: auto;
+    height: 100%;
+    padding: 5px 0 0 0;
+    img {
+      width: 50px;
+      height: 50px;
+      border-radius: 50%;
+    }
+  }
+  .roll-con {
+    float: left;
+    width: 76%;
+    height: 100%;
+    margin: 0 0 0 9px;
+    padding: 10px 0 0 0;
+    .poster {
+      float: left;
+      width: 100%;
+      height: auto;
+    }
+    .member {
+      float: left;
+      width: 100%;
+      height: auto;
+    }
+  }
+  .check-image {
+    float: right;
+    width: auto;
+    height: 100%;
+    img {
+      float: right;
+      width: 20px;
+      height: 100%;
+    }
+  }
+}
+
