--- a/app/views/main/profile/profile.html
+++ b/app/views/main/profile/profile.html
@@ -1,15 +1,14 @@
 <div class="user-info">
 	<img src="images/ProfilePhoto.png">
-	<div class="cahnge-photo-btn">
-		<img src="images/BagleImageBtn.png">
-	</div>
 	<div class="name-con">
 		<span>My Name</span><br>
 		<span>My Information</span>
 	</div>
-	<div class="user-setting-btn">
-		<img src="images/SettingBtn.png">
-	</div>
+	<a ng-href="#/edit-profile">
+		<div class="user-setting-btn">
+			<img src="images/SettingBtn.png">
+		</div>
+	</a>
 </div>
 
 <div class="bagle-tab">
@@ -32,7 +31,8 @@
 		</div>
 	</div>
 	<div class="option">
-		<img src="images/AddBagleBtn.png">
+		<a ng-href="#/edit-group"><img src="images/BagleOptionBtn.png"></a>
+		<a ng-href="#/member"><img src="images/BagleMemberBtn.png"></a>
 	</div>
 </div>
 
