각 화면별 header / footer 임시 구성. 화면 연결.

--- a/app/views/main/activity/activity.html
+++ b/app/views/main/activity/activity.html
@@ -1,3 +1,11 @@
+<div class="header">
+  <div class="left-button">
+  </div>
+  <span>ACTIVITY</span>
+  <div class="right-button">
+  </div>
+</div>
+
 <div class="acitiviy-info">
 	<div class="user-photo">
 		<img src="images/profilePhotoThumb.png">
@@ -10,3 +18,13 @@
 	</div>
 </div>
 <div class="line"></div>
+
+<div class="footer">
+  <div class="menu">
+    <a ng-href="#"><img class="icon" src="images/TimeLineBtn.png"></a>
+    <a ng-href="#/search"><img class="icon" src="images/SearchBtn.png"></a>
+    <a ng-href="#/create-card"><img class="icon" src="images/CreateBtn.png"></a>
+    <a ng-href="#/activity"><img class="icon" src="images/ActivityBtn.png"></a>
+    <a ng-href="#/profile"><img class="icon" src="images/ProfileBtn.png"></a>
+  </div>
+</div>
