--- a/app/views/main/profile/profile.html
+++ b/app/views/main/profile/profile.html
@@ -1,3 +1,11 @@
+<div class="header">
+  <div class="left-button">
+  </div>
+  <span>MY MENU</span>
+  <div class="right-button">
+  </div>
+</div>
+
 <div class="user-info">
 	<img src="images/ProfilePhoto.png">
 	<div class="name-con">
@@ -41,3 +49,14 @@
 		<span>CREATE NEW BAGEL</span>
 	</div>
 </a>
+
+
+<div class="footer">
+  <div class="menu">
+    <a ng-href="#"><img class="icon" src="images/TimeLineBtn.png"></a>
+    <a ng-href="#/search"><img class="icon" src="images/SearchBtn.png"></a>
+    <a ng-href="#/create-card"><img class="icon" src="images/CreateBtn.png"></a>
+    <a ng-href="#/activity"><img class="icon" src="images/ActivityBtn.png"></a>
+    <a ng-href="#/profile"><img class="icon" src="images/ProfileBtn.png"></a>
+  </div>
+</div>
