--- a/app/views/main/search/search.html
+++ b/app/views/main/search/search.html
@@ -25,3 +25,13 @@
 		<img src="images/AddBagleBtn.png">
 	</div>
 </div>
+
+<div class="footer">
+  <div class="menu">
+    <a ng-href="#"><img class="icon" src="images/TimeLineBtn.png"></a>
+    <a ng-href="#/search"><img class="icon" src="images/SearchBtn.png"></a>
+    <a ng-href="#/create-card"><img class="icon" src="images/CreateBtn.png"></a>
+    <a ng-href="#/activity"><img class="icon" src="images/ActivityBtn.png"></a>
+    <a ng-href="#/profile"><img class="icon" src="images/ProfileBtn.png"></a>
+  </div>
+</div>
