--- a/app/views/main/timeline/timeline.html
+++ b/app/views/main/timeline/timeline.html
@@ -1,3 +1,11 @@
+<div class="header">
+  <div class="left-button">
+  </div>
+  <span>TIME LINE</span>
+  <div class="right-button">
+  </div>
+</div>
+
 <div class="card">
 	<div class="info">
 		<div class="card-info">
@@ -22,7 +30,13 @@
 		<img src="images/media-photo.png">
 	</div>
 	<div class="description-text">
-		The wedding hashtag. for the uniniaiated, can uaually The wedding hashtag. for the uniniaiated, can uaually The wedding hashtag. for the uniniaiated, can uaually The wedding hashtag. for the uniniaiated, can uaually The wedding hashtag. for the uniniaiated, can uaually The wedding hashtag. for the uniniaiated, can uaually The wedding hashtag. for the uniniaiated, can uaually
+		10일 한국은행이 발표한 '올 11월 금융시장 동향'에 따르면 지난달 모기지론 양도분을 포함한 은행 가계대출은 전월대비 6조9000억원 증가한 554조3000억원으로 집계됐다.
+
+한 달 새 대출액이 6조9000억원이 증가한 것은 한은이 집계를 시작한 2008년 이후 최고치로 이는 지난달에 이어 두번째다.
+
+특히 전월에 이어 두 달 연속 주택담보대출(이하 주담대)이 크게 늘며 전체 가계대출도 증가했다. 은행 주담대는 전월에 비해 5조9000억원 늘어나며 잔액이 400조7000억원을 기록했다.
+
+한은 관계자는 "LTV·DTI 비율 규제완화 효과와 주택거래 호조가 시기적으로 맞물리면서 주담대가 지난달에 이어 크게 늘었다"며 "기준금리 하락의 영향으로 은행 대출금리가 떨어진 것도 대출증가에
 	</div>
 	<div class="servey">
 		<div class="radio-group">
@@ -31,16 +45,16 @@
 		<div class="checkbox-group">
 			<input class="checkbox-button" type="checkbox"><span>I`m black and tall.</span>
 		</div>
-		<div class="rating">
-			<img src="images/RatingIconActive.png">
-			<img src="images/RatingIconActive.png">
-			<img src="images/RatingIcon.png">
-			<img src="images/RatingIcon.png">
-			<img src="images/RatingIcon.png">
-			<span>2.0</span>
-		</div>
 		<div class="input-number">
 			<input class="number" type="text" placeholder="Input Numbers">
+		</div>
+		<div class="rating">
+			<img src="images/RatingGray.png">
+			<img src="images/RatingGray.png">
+			<img src="images/RatingDefault.png">
+			<img src="images/RatingDefault.png">
+			<img src="images/RatingDefault.png">
+			<span>2.0</span>
 		</div>
 	</div>
 	<div class="options">
@@ -56,4 +70,14 @@
 			<span>Send</span>
 		</div>
 	</div>
+</div>
+
+<div class="footer">
+  <div class="menu">
+    <a ng-href="#"><img class="icon" src="images/TimeLineBtn.png"></a>
+    <a ng-href="#/search"><img class="icon" src="images/SearchBtn.png"></a>
+    <a ng-href="#/create-card"><img class="icon" src="images/CreateBtn.png"></a>
+    <a ng-href="#/activity"><img class="icon" src="images/ActivityBtn.png"></a>
+    <a ng-href="#/profile"><img class="icon" src="images/ProfileBtn.png"></a>
+  </div>
 </div>
