--- a/app/views/popup/auth/login/login.html
+++ b/app/views/popup/auth/login/login.html
@@ -12,7 +12,7 @@
 		</div>
 		<div class="password-con">
 			<input class="password" type="text" placeholder="PASSWORD">
-			<img class="approval" src="images/LoginBtn.png">
+			<a ng-href="#/timeline"><img class="approval" src="images/LoginBtn.png"></a>
 		</div>
 	</div>
 	<span class="or">OR</span>
