--- a/app/views/popup/auth/signup/signup.html
+++ b/app/views/popup/auth/signup/signup.html
@@ -10,12 +10,12 @@
 		<div class="email-con">
 			<input class="email" type="text" placeholder="NAME">
 		</div>
-		<div class="email-con">
-			<input class="email" type="text" placeholder="EMAIL">
+		<div class="password-con">
+			<input class="password" type="text" placeholder="EMAIL">
 		</div>
 		<div class="password-con">
 			<input class="password" type="text" placeholder="PASSWORD">
-			<img class="approval" src="images/LoginBtn.png">
+			<a ng-href="#/timeline"><img class="approval" src="images/LoginBtn.png"></a>
 		</div>
 	</div>
 	<span class="or">OR</span>
