--- a/app/views/popup/create-card/create-card.html
+++ b/app/views/popup/create-card/create-card.html
@@ -1,3 +1,12 @@
+<div class="header">
+  <div class="left-button">
+    <a ng-href="#/timeline"><img src="images/CloseBtn.png"></a>
+  </div>
+  <div class="right-button">
+    <a ng-href="#/select-group"><img src="images/PostBtn.png"></a>
+  </div>
+</div>
+
 <div class="create-type-select">
 	<div class="create-type">
 		<span>Public</span>
@@ -55,5 +64,3 @@
 		<span>RATING</span>
 	</div>
 </div>
-
-<a ng-href="#/select-group"><div>임시 POST-> 화면연결</div></a>
