--- a/app/views/popup/create-group/create-group.html
+++ b/app/views/popup/create-group/create-group.html
@@ -1,3 +1,13 @@
+<div class="header">
+  <div class="left-button">
+    <a ng-href="#/select-group"><img src="images/BackBtn.png"></a>
+  </div>
+  <span>CREATE BAGLE</span>
+  <div class="right-button">
+    <a ng-href="#/select-group"><img src="images/CompleteBtn.png"></a>
+  </div>
+</div>
+
 <div class="create-name-con">
 	<div class="name">
 		<span>BAGLE NAME</span>
