--- a/app/views/popup/edit-group/edit-group.html
+++ b/app/views/popup/edit-group/edit-group.html
@@ -1,3 +1,13 @@
+<div class="header-gray">
+  <div class="left-button">
+    <img src="images/CloseBtnGray.png">
+  </div>
+  <span>bagel</span>
+  <div class="right-button">
+    <img src="images/CompleteBtnGray.png">
+  </div>
+</div>
+
 <div class="create-name-con">
 	<div class="name">
 		<span>BAGLE NAME</span>
