--- a/app/views/popup/edit-profile/edit-profile.html
+++ b/app/views/popup/edit-profile/edit-profile.html
@@ -1,3 +1,13 @@
+<div class="header-gray">
+  <div class="left-button">
+    <a ng-href="#/profile"><img src="images/CloseBtnGray.png"></a>
+  </div>
+  <span>POSTER SELECT</span>
+  <div class="right-button">
+    <a ng-href="#/profile"><img src="images/CompleteBtnGray.png"></a>
+  </div>
+</div>
+
 <div class="user-info">
 	<img src="images/ProfilePhoto.png">
 	<div class="cahnge-photo-btn">
@@ -46,6 +56,6 @@
 	</div>
 </div>
 
-<div class="delege-account">
+<div class="delete-account">
 	<span>DELETE ACCOUNT</span>
 </div>
