--- a/app/views/popup/invite-member/invite-member.html
+++ b/app/views/popup/invite-member/invite-member.html
@@ -1,3 +1,12 @@
+<div class="header">
+  <div class="left-button">
+    <img src="images/BackBtn.png">
+  </div>
+  <span>INVITE MEMBERS</span>
+  <div class="right-button">
+  </div>
+</div>
+
 <div class="url-con">
 	<div class="url-title">
 		<span>INVITE URL</span>
