--- a/app/views/popup/language/language.html
+++ b/app/views/popup/language/language.html
@@ -1,3 +1,13 @@
+<div class="header-gray">
+  <div class="left-button">
+    <img src="images/BackBtnGray.png">
+  </div>
+  <span>LANGUAGE</span>
+  <div class="right-button">
+    <img src="images/CompleteBtnGray.png">
+  </div>
+</div>
+
 <div class="language-con">
 	<span>English</span>
 	<img src="images/check180.png">
