--- a/app/views/popup/member/member.html
+++ b/app/views/popup/member/member.html
@@ -1,3 +1,12 @@
+<div class="header">
+  <div class="left-button">
+    <img src="images/BackBtn.png">
+  </div>
+  <span>bagel</span>
+  <div class="right-button">
+  </div>
+</div>
+
 <a ng-href="#/invite-member">
 	<div class="invite-member">
 		<img class="add-button" src="images/AddBtnGray.png">
