--- a/app/views/popup/password/password.html
+++ b/app/views/popup/password/password.html
@@ -1,14 +1,24 @@
-<div class="password-con">
+<div class="header-gray">
+  <div class="left-button">
+    <img src="images/BackBtnGray.png">
+  </div>
+  <span>CHANGE PASSWORD</span>
+  <div class="right-button">
+    <img src="images/CompleteBtnGray.png">
+  </div>
+</div>
+
+<div class="change-password-con">
 	<img src="images/Lock.png">
 	<input class="input-password" type-"text" placeholder="Current Password">
 </div>
 
-<div class="password-con">
+<div class="change-password-con">
 	<img src="images/Lock.png">
 	<input class="input-password" type-"text" placeholder="New Password">
 </div>
 
-<div class="password-con">
+<div class="change-password-con">
 	<img src="images/Lock.png">
 	<input class="input-password" type-"text" placeholder="New Password again">
 </div>
