--- a/app/views/popup/polling/polling.html
+++ b/app/views/popup/polling/polling.html
@@ -1,3 +1,13 @@
+<div class="header">
+  <div class="left-button">
+    <a ng-href="#/create-card"><img src="images/CloseBtn.png"></a>
+  </div>
+  <span>POLLING</span>
+  <div class="right-button">
+    <a ng-href="#/create-card"><img src="images/CompleteBtn.png"></a>
+  </div>
+</div>
+
 <div class="item-input-con">
 	<input class="item-input" type="text" placeholder="ITEM INPUT">
 </div>
