--- a/app/views/popup/select-group/select-group.html
+++ b/app/views/popup/select-group/select-group.html
@@ -1,3 +1,12 @@
+<div class="header">
+  <div class="left-button">
+    <a ng-href="#/create-card"><img src="images/BackBtn.png"></a>
+  </div>
+  <span>POST IN</span>
+  <div class="right-button">
+  </div>
+</div>
+
 <a ng-href="#/create-group">
 	<div class="create-group">
 		<span>CTRATE NEW BAGLE</span>
@@ -10,6 +19,8 @@
 	<img src="images/Check200.png">
 </div>
 
-<div class="post-button">
-	<span>POST</span>
-</div>
+<a ng-href="#/timeline">
+	<div class="post-button">
+		<span>POST</span>
+	</div>
+</a>
