--- a/app/views/popup/select-member/select-member.html
+++ b/app/views/popup/select-member/select-member.html
@@ -1,3 +1,13 @@
+<div class="header-gray">
+  <div class="left-button">
+    <img src="images/BackBtnGray.png">
+  </div>
+  <span>POSTER SELECT</span>
+  <div class="right-button">
+    <img src="images/CompleteBtnGray.png">
+  </div>
+</div>
+
 <div class="poster-con">
 	<div class="poster-photo">
 		<img src="images/ProfilePhotoThumb.png">
