--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -20,6 +20,7 @@ $bright-white: #B37F75;
 $gray: #e8e8e8;
 $bright-gray: #f1f1f1;
 $dark-gray: #848484;
+$header-gray: #424E4F;
 $black: #000000;
 
 // ------ sass ------
@@ -53,11 +54,47 @@ $black: #000000;
   }
   .right-button {
     float: right;
-    width: auto;
+    width: 20%;
+    height: 100%;
+    img {
+      float: right;
+      width: auto;
+      height: 46px;
+    }
+  }
+}
+
+.header-gray {
+  float: left;
+  width: 100%;
+  height: 46px;
+  background-color: $header-gray;
+  .left-button {
+    float: left;
+    width: 25%;
     height: 100%;
     img {
       float: left;
       width: 46px;
+      height: 46px;
+    }
+  }
+  span {
+    float: left;
+    width: 50%;
+    line-height: 46px;
+    font-size: 1.1em;
+    font-weight: 500;
+    text-align: center;
+    color: $white;
+  }
+  .right-button {
+    float: right;
+    width: 20%;
+    height: 100%;
+    img {
+      float: right;
+      width: auto;
       height: 46px;
     }
   }
@@ -98,7 +135,6 @@ $black: #000000;
   float: left;
   width: 100%;
   height: 100%;
-  padding: 0 0 40px 0;
 
   .card {
     float: left;
@@ -163,6 +199,7 @@ $black: #000000;
         display:table-cell;
         vertical-align:middle;
         width: auto;
+        font-weight: 500;
       }
       .time {
         display: table-cell;
@@ -190,6 +227,8 @@ $black: #000000;
       width: 100%;
       height: auto;
       padding: 10px;
+      font-size: 12px;
+      line-height: 20px;
     }
     .servey {
       float: left;
@@ -214,13 +253,17 @@ $black: #000000;
       }
 
       .rating {
+        float: left;
+        width: 100%;
+        height: auto;
         img {
           float: left;
-          width: 18%;
-          height: 22px;
+          width: 28px;
+          height: 26px;
+          margin: 0 31px 0 0;
         }
         span {
-
+          float: right;
         }
       }
       .input-number {
@@ -257,7 +300,7 @@ $black: #000000;
         width: auto;
         height: 26px;
         margin: 0 0 0 8px;
-        padding: 0 3px 0 3px;
+        padding: 0 8px 0 5px;
         background-color: $gray;
         border-radius: 3px;
         img {
@@ -269,7 +312,7 @@ $black: #000000;
         float: right;
         width: auto;
         height: 26px;
-        padding: 0 3px 0 3px;
+        padding: 0 8px 0 5px;
         background-color: $gray;
         border-radius: 3px;
         img {
@@ -333,7 +376,8 @@ $black: #000000;
       float: left;
       width: 100%;
       height: 60px;
-      background: url('../images/LoginBar02.png');
+      background: url('../images/LoginBar01.png');
+      background-size: 100% 100%;
       margin: 0 0 1px 0;
       .email {
         float: left;
@@ -342,6 +386,7 @@ $black: #000000;
         border:none;
         background:transparent;
         text-align: center;
+        line-height: 74px;
       }
     }
     .password-con {
@@ -349,6 +394,8 @@ $black: #000000;
       width: 100%;
       height: 46px;
       background: url('../images/LoginBar02.png');
+      background-size: 100% 100%;
+      margin: 0 0 1px 0;
       .password {
         float: left;
         width: 90%;
@@ -404,6 +451,7 @@ $black: #000000;
   width: 100%;
   height: 46px;
   background : url('../images/searchBar.png');
+  background-size: 100% 100%;
   .search {
     float: left;
     width: 100%;
@@ -411,7 +459,7 @@ $black: #000000;
     line-height:46px;
     border:none;
     background:transparent;
-    padding: 0 0 0 10px;
+    padding: 0 0 0 20px;
   }
 }
 
@@ -428,6 +476,7 @@ $black: #000000;
     width: 50%;
     height: 46px;
     background: url('../images/TabLeftBtn.png');
+    background-size: 100% 100%;
     text-align: center;
     line-height: 46px;
   }
@@ -436,6 +485,7 @@ $black: #000000;
     width: 50%;
     height: 46px;
     background: url('../images/TabRightBtn.png');
+    background-size: 100% 100%;
     text-align: center;
     line-height: 46px;
   }
@@ -446,6 +496,7 @@ $black: #000000;
   width: 100%;
   height: 88px;
   background: url('../images/BaglePhoto.png');
+  background-size: 100% 100%;
   .group-con {
     float: left;
     width: 70%;
@@ -902,6 +953,7 @@ $black: #000000;
   width: 100%;
   height: 62px;
   background: url('../images/BagleImageGradient.png');
+  background-size: 100% 100%;
   span {
     float: left;
     margin: 0 0 0 16px;
@@ -919,7 +971,7 @@ $black: #000000;
 .post-button {
   position: absolute;
   left: 0;
-  bottom: 51px;
+  bottom: 0;
   width: 100%;
   height: 65px;
   background-color: $dark-red;
@@ -1004,7 +1056,7 @@ $black: #000000;
   }
 }
 
-// ------ group-edit ------
+// ------ edit-group ------
 
 .selected-members {
   float: left;
@@ -1105,11 +1157,12 @@ $black: #000000;
   }
 }
 
-.delege-account {
+.delete-account {
   float: left;
   width: 100%;
   height: 56px;
   background: url('../images/DeleteAccountBtn.png');
+  background-size: 100% 100%;
   span {
     line-height: 56px;
     padding: 0 0 0 15px;
@@ -1118,7 +1171,7 @@ $black: #000000;
 
 // ------ change-password ------
 
-.password-con {
+.change-password-con {
   float: left;
   width: 100%;
   height: 56px;
