--- a/app/views/popup/profile/profile.html
+++ b/app/views/popup/profile/profile.html
@@ -1,3 +1,12 @@
+<div class="header">
+  <div class="left-button">
+    <a ng-href="#/timeline"><img src="images/BackBtn.png"></a>
+  </div>
+  <span>USER PROFILE</span>
+  <div class="right-button">
+  </div>
+</div>
+
 <div class="user-info">
 	<img src="images/ProfilePhoto.png">
 	<div class="name-con">
