create-card 화면에 dropdown menu 추가 구성.

--- a/app/views/popup/create-card/create-card.html
+++ b/app/views/popup/create-card/create-card.html
@@ -14,6 +14,30 @@
 	<img src="images/ArrowDown.png">
 </div>
 
+<div class="create-card-dropdown">
+	<div class="create-dropdown-con">
+		<div class="create-dropdown-type">
+			<span class="dropdown-type-title">Public</span>
+			<span class="dropdown-type-sub-title">Everyone visible</span>
+		</div>
+		<img src="images/Check180.png">
+	</div>
+	<div class="create-dropdown-con">
+		<div class="create-dropdown-type">
+			<span class="dropdown-type-title">Only Me</span>
+			<span class="dropdown-type-sub-title">Answer visble only to me</span>
+		</div>
+		<img src="images/Check180.png">
+	</div>
+	<div class="create-dropdown-con">
+		<div class="create-dropdown-type">
+			<span class="dropdown-type-title">Anonymous</span>
+			<span class="dropdown-type-sub-title">Everyone visible, but shown as Anonymous</span>
+		</div>
+		<img src="images/Check180.png">
+	</div>
+</div>
+
 <textarea class="write-content" placeholder="WRITE CONTENT">
 </textarea>
 
