--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -21,6 +21,7 @@ $gray: #e8e8e8;
 $bright-gray: #f1f1f1;
 $dark-gray: #848484;
 $header-gray: #424E4F;
+$dropdown-font-gray: #878787;
 $black: #000000;
 
 // ------ sass ------
@@ -824,6 +825,44 @@ $black: #000000;
     width: auto;
     height: 100%;
     margin: 0 15px 0 0;
+  }
+}
+
+.create-card-dropdown {
+  float: left;
+  width: 100%;
+  height: auto;
+  .create-dropdown-con {
+    float: left;
+    width: 100%;
+    height: 56px;
+    border-bottom: 1px solid $gray;
+    .create-dropdown-type {
+      float: left;
+      width: auto;
+      height: 100%;
+      margin: 0 0 0 16px;
+      .dropdown-type-title {
+        float: left;
+        width: 80%;
+        height: 50%;
+        line-height: 38px;
+      }
+      .dropdown-type-sub-title {
+        float: left;
+        width: 80%;
+        height: 50%;
+        line-height: 18px;
+        color: $dropdown-font-gray;
+        font-size: 5px;
+      }
+    }
+    img {
+      float: right;
+      width: auto;
+      height: 100%;
+      margin: 0 15px 0 0;
+    }
   }
 }
 
