그룹 리스트의 이미지 + 그라데이션 겹쳐질 공간 할당

--- a/app/views/main/search/search.html
+++ b/app/views/main/search/search.html
@@ -11,19 +11,46 @@
 	</div>
 </div>
 
-<div class="group-info">
-	<div class="group-con">
-		<div class="master">
-			<img src="images/profilePhotoThumb.png">
-			<span>Sally Wilson</span><br><span>in Love Photo</span>
+<div class="group-list">
+	<div class="group-photo"></div>
+	<div class="group-gradation"></div>
+
+	<div class="group-info">
+		<div class="group-con">
+			<div class="master">
+				<img src="images/profilePhotoThumb.png">
+				<span>Sally Wilson</span><br><span>in Love Photo</span>
+			</div>
+			<div class="description">
+				Information
+			</div>
 		</div>
-		<div class="description">
-			Information
+		<div class="option">
+			<img src="images/AddBagleBtn.png">
 		</div>
 	</div>
-	<div class="option">
-		<img src="images/AddBagleBtn.png">
+
+</div>
+
+<div class="group-list">
+	<div class="group-photo"></div>
+	<div class="group-gradation"></div>
+
+	<div class="group-info">
+		<div class="group-con">
+			<div class="master">
+				<img src="images/profilePhotoThumb.png">
+				<span>Sally Wilson</span><br><span>in Love Photo</span>
+			</div>
+			<div class="description">
+				Information
+			</div>
+		</div>
+		<div class="option">
+			<img src="images/AddBagleBtn.png">
+		</div>
 	</div>
+
 </div>
 
 <div class="footer">
