--- a/app/views/popup/edit-profile/edit-profile.html
+++ b/app/views/popup/edit-profile/edit-profile.html
@@ -10,7 +10,7 @@
 
 <div class="user-info">
 	<img src="images/ProfilePhoto.png">
-	<div class="cahnge-photo-btn">
+	<div class="change-photo-btn">
 		<img src="images/BagleImageBtn.png">
 	</div>
 	<div class="name-con">
