--- a/app/views/popup/select-group/select-group.html
+++ b/app/views/popup/select-group/select-group.html
@@ -14,9 +14,13 @@
 	</div>
 </a>
 
-<div class="select-group">
-	<span>GROUP NAME</span>
-	<img src="images/Check200.png">
+<div class="group-list">
+	<div class="group-photo"></div>
+	<div class="group-gradation"></div>
+	<div class="select-group">
+		<span>GROUP NAME</span>
+		<img src="images/Check200.png">
+	</div>
 </div>
 
 <a ng-href="#/timeline">
