--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -30,7 +30,6 @@ $black: #000000;
 // ------ header, footer, line ------
 
 .header {
-  float: left;
   width: 100%;
   height: 46px;
   background-color: $red;
@@ -66,7 +65,6 @@ $black: #000000;
 }
 
 .header-gray {
-  float: left;
   width: 100%;
   height: 46px;
   background-color: $header-gray;
@@ -161,7 +159,7 @@ $black: #000000;
         span {
           float: left;
           margin: 0 0 0 10px;
-          font-size: 0.8em;
+          font-size: 6px;
         }
       }
       .time {
@@ -179,10 +177,12 @@ $black: #000000;
           margin: 0 8px 0 0;
         }
         span {
+          float: right;
           display: table-cell;
           vertical-align: middle;
           line-height: 100%;
-          float: right;
+          font-size: 2.5px;
+          color: $dark-gray;
         }
       }
     }
@@ -193,14 +193,16 @@ $black: #000000;
       height: 52px;
       padding: 10px;
       img {
-          width: 32px;
-          height: 32px;
+        float: left;
+        width: 32px;
+        height: 32px;
         }
       .title {
-        display:table-cell;
-        vertical-align:middle;
+        float: left;
         width: auto;
         font-weight: 500;
+        font-size: 6px;
+        line-height: 32px;
       }
       .time {
         display: table-cell;
@@ -210,6 +212,8 @@ $black: #000000;
           width: auto;
           height: auto;
           float: right;
+          font-size: 6px;
+          color: $dark-gray;
         }
       }
     }
@@ -465,7 +469,6 @@ $black: #000000;
 }
 
 .bagle-tab {
-  float: left;
   width: 100%;
   height: 46px;
   span {
@@ -492,53 +495,80 @@ $black: #000000;
   }
 }
 
-.group-info {
-  float: left;
+.group-list{
+  position: relative;
   width: 100%;
   height: 88px;
-  background: url('../images/BaglePhoto.png');
-  background-size: 100% 100%;
-  .group-con {
-    float: left;
-    width: 70%;
-    height: 100%;
-    .master {
+  .group-photo {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 88px;
+    background: url('../images/media-photo.png');
+    background-size: 100% 100%;
+    z-index: 1;
+  }
+  .group-gradation{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 88px;
+    background: url('../images/BagleImageGradient.png');
+    background-size: 100% 100%;
+    z-index: 2;
+  }
+  .group-info {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 88px;
+    z-index: 3;
+    .group-con {
       float: left;
       width: 70%;
-      height: auto;
-      margin: 15px 0 0 0;
-      padding: 0 0 0 8px;
-      img {
+      height: 100%;
+      .master {
         float: left;
-        width: 32px;
-        height: 32px;
-        border-radius: 50%;
+        width: 70%;
+        height: auto;
+        margin: 15px 0 0 0;
+        padding: 0 0 0 8px;
+        img {
+          float: left;
+          width: 32px;
+          height: 32px;
+          border-radius: 50%;
+        }
+        span {
+          float: left;
+          margin: 0 0 0 10px;
+          color: $white;
+          font-size: 0.8em;
+        }
       }
-      span {
+      .description {
         float: left;
-        margin: 0 0 0 10px;
+        width: 70%;
+        height: auto;
+        margin: 10px 0 0 0;
+        padding: 0 0 0 15px;
         color: $white;
         font-size: 0.8em;
       }
     }
-    .description {
-      float: left;
-      width: 70%;
-      height: auto;
-      padding: 0 0 0 15px;
-      color: $white;
-      font-size: 0.8em;
-    }
-  }
-  .option {
-    float: right;
-    width: auto;
-    height: 100%;
-    img {
+    .option {
       float: right;
-      width: 32px;
-      height: auto;
-      padding: 0 8px 0 0;
+      width: auto;
+      height: 100%;
+      img {
+        float: right;
+        width: auto;
+        height: 100%;
+        padding: 0 8px 0 0;
+      }
     }
   }
 }
@@ -589,14 +619,13 @@ $black: #000000;
 // ------ setting ------
 
 .user-info {
-  float: left;
   width: 100%;
   height: 253px;
   img {
     width: 100%;
     height: 100%;
   }
-  .cahnge-photo-btn {
+  .change-photo-btn {
     position: absolute;
     top: 46px;
     right: 0;
@@ -650,10 +679,12 @@ $black: #000000;
 // ------ create-group ------
 
 .create-name-con {
-  float: left;
+  position: absolute;
+  top: 0;
+  left: 0;
   width: 100%;
   height: 87px;
-  background-color: black;
+  z-index: 3;
   .name {
     float: left;
     width: 100%;
@@ -969,7 +1000,6 @@ $black: #000000;
 // ------ select-group ------
 
 .create-group {
-  float: left;
   width: 100%;
   height: 62px;
   background-color: $black;
@@ -988,15 +1018,18 @@ $black: #000000;
 }
 
 .select-group {
-  float: left;
+  position: absolute;
+  top: 0;
+  left: 0;
   width: 100%;
-  height: 62px;
+  height: 88px;
   background: url('../images/BagleImageGradient.png');
   background-size: 100% 100%;
+  z-index: 3;
   span {
     float: left;
     margin: 0 0 0 16px;
-    line-height: 62px;
+    line-height: 88px;
     color: $white;
   }
   img {
