--- a/app/views/main/profile/profile.html
+++ b/app/views/main/profile/profile.html
@@ -28,20 +28,26 @@
 	</div>
 </div>
 
-<div class="group-info">
-	<div class="group-con">
-		<div class="master">
-			<img src="images/profilePhotoThumb.png">
-			<span>Sally Wilson</span><br><span>in Love Photo</span>
+<div class="group-list">
+	<div class="group-photo"></div>
+	<div class="group-gradation"></div>
+
+	<div class="group-info">
+		<div class="group-con">
+			<div class="master">
+				<img src="images/profilePhotoThumb.png">
+				<span>Sally Wilson</span><br><span>in Love Photo</span>
+			</div>
+			<div class="description">
+				Information
+			</div>
 		</div>
-		<div class="description">
-			Information
+		<div class="option">
+			<a ng-href="#/edit-group"><img src="images/BagleOptionBtn.png"></a>
+			<a ng-href="#/member"><img src="images/BagleMemberBtn.png"></a>
 		</div>
 	</div>
-	<div class="option">
-		<a ng-href="#/edit-group"><img src="images/BagleOptionBtn.png"></a>
-		<a ng-href="#/member"><img src="images/BagleMemberBtn.png"></a>
-	</div>
+
 </div>
 
 <a ng-href="#/create-group">
