--- a/app/views/popup/edit-group/edit-group.html
+++ b/app/views/popup/edit-group/edit-group.html
@@ -8,14 +8,18 @@
   </div>
 </div>
 
-<div class="create-name-con">
-	<div class="name">
-		<span>BAGLE NAME</span>
+<div class="group-list">
+	<div class="group-photo"></div>
+	<div class="group-gradation"></div>
+	<div class="create-name-con">
+		<div class="name">
+			<span>BAGLE NAME</span>
+		</div>
+		<div class="name">
+			<span>Information</span>
+		</div>
+		<img src="images/BagleImageBtn.png">
 	</div>
-	<div class="name">
-		<span>Information</span>
-	</div>
-	<img src="images/BagleImageBtn.png">
 </div>
 
 <div class="automatic-con">
