--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -109,7 +109,7 @@ $black: #000000;
   .icon {
     float: left;
     width: 20%;
-    height: 100%;
+    height: 52px;
   }
 }
 
@@ -139,7 +139,7 @@ $black: #000000;
     float: left;
     width: 100%;
     height: auto;
-    margin: 0 0 20px 0;
+    margin: 0 0 52px 0;
     background-color: $white;
     .info {
       float: left;
